--- a/index.html
+++ b/index.html
@@ -1,11 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="./css/style.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+		/>
+	</head>
+	<body>
+		<header class="header">
+			<div class="container">
+				<div class="header__wrapper">
+					<div class="logo__wrapper">
+						<img src="./assests/logo.svg" alt="logo" class="logo" />
+					</div>
+					<div class="nav__wrapper">
+						<p class="nav__text">
+							<a href="#" class="nav__link">Marketplace</a>
+						</p>
+						<p class="nav__text"><a href="#" class="nav__link">Rankings</a></p>
+						<p class="nav__text">
+							<a href="#" class="nav__link">Connect a wallet</a>
+						</p>
+						<button class="btn">Sign Up</button>
+					</div>
+				</div>
+			</div>
+		</header>
+
+		<main class="main">
+			<section class="section1">
+				<div class="container">
+					<div class="section1__wrapper">
+						<div class="section__wrapper">
+							<h1 class="ecbiri">
+								Discover <br />
+								digital art & <br />
+								Collect NFTs
+							</h1>
+							<p class="lol">
+								NFT marketplace UI created with Anima for <br />
+								Figma. Collect, buy and sell art from more <br />
+								than 20k NFT artists.
+							</p>
+							<button class="btn2">Get Started</button>
+							<div class="vaxaxa">
+								<div class="pororo">
+									<h2>
+										240k+ <br />
+										Total Sale
+									</h2>
+								</div>
+
+								<div class="pororo">
+									<h2>
+										100k+ <br />
+										Auctions
+									</h2>
+								</div>
+
+								<div class="pororo">
+									<h2>
+										240k+ <br />
+										Artists
+									</h2>
+								</div>
+							</div>
+							<div class="img">
+								<img src="./" alt="" />
+							</div>
+						</div>
+						<div class="section__moon">
+							<img
+								width="510"
+								height="401"
+								src="./assests/moon.png"
+								alt="moon__cosmonavt"
+								class="moon__img"
+							/>
+							<div class="moon__info-wrapper">
+								<p class="moon__info">Space Walking</p>
+								<p class="moon__avatar-info">Animakid</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- ctrl z qvorma extyot bol -->
+
+			<!-- va shunaqa  ctrl s qptur -->
+
+			<!-- section start -->
+			<section class="ikincisecwn">
+				<div class="container">
+					<div class="pictures">
+						<div class="ikincisi">
+							<h1 class="h1">Trending Collection</h1>
+							<p class="pisimi">
+								Checkout our weekly updated trending collection.
+							</p>
+							<p></p>
+						</div>
+
+						<div class="rasmi">
+							<img class="birinci" src="./assests/first_dog.png" alt="" />
+							<img class="ikinci" src="./assests/second_dog.png" alt="" />
+							<img class="ucincici" src="./assests/third_dog.png" alt="" />
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- section end -->
+		</main>
+	</body>
 </html>
