--- a/index.html
+++ b/index.html
@@ -36,33 +36,33 @@
 				<div class="container">
 					<div class="section1__wrapper">
 						<div class="section__wrapper">
-							<h1 class="ecbiri">
+							<h1 class="discover__title">
 								Discover <br />
 								digital art & <br />
 								Collect NFTs
 							</h1>
-							<p class="lol">
+							<p class="marketplace__text">
 								NFT marketplace UI created with Anima for <br />
 								Figma. Collect, buy and sell art from more <br />
 								than 20k NFT artists.
 							</p>
 							<button class="btn2">Get Started</button>
-							<div class="vaxaxa">
-								<div class="pororo">
+							<div class="info__wrapper">
+								<div class="section1__info">
 									<h2>
 										240k+ <br />
 										Total Sale
 									</h2>
 								</div>
 
-								<div class="pororo">
+								<div class="section1__info">
 									<h2>
 										100k+ <br />
 										Auctions
 									</h2>
 								</div>
 
-								<div class="pororo">
+								<div class="section1__info">
 									<h2>
 										240k+ <br />
 										Artists
@@ -100,18 +100,305 @@
 							<p class="pisimi">
 								Checkout our weekly updated trending collection.
 							</p>
-							<p></p>
 						</div>
 
 						<div class="rasmi">
-							<img class="birinci" src="./assests/first_dog.png" alt="" />
-							<img class="ikinci" src="./assests/second_dog.png" alt="" />
-							<img class="ucincici" src="./assests/third_dog.png" alt="" />
+							<img class="ucincici" src="./Collection Card.svg" alt="" />
+							<img class="birinci" src="./Collection Card (2).svg" alt="" />
+							<img class="ikinci" src="./Collection Card (4).svg" alt="" />
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- section end -->
+
+			<!-- gcedwshdjehgtfvrdehyswhdetfvdebhyuwdvgfrdebhw -->
+
+			<!-- cvbhejwihbgyujd2ijfyugtbcrjibgrrhfvn -->
+			<section class="section__third">
+				<div class="container">
+					<div class="third__wrapper">
+						<div class="third__top-info">
+							<p class="third__title">Top creators</p>
+							<p class="third__subtitle">
+								Checkout Top Rated Creators on the NFT Marketplace
+							</p>
+							<button class="third__button">
+								<i class="bi bi-airplane-engines"></i> View Rankings
+							</button>
+						</div>
+						<div class="people">
+							<div class="people__wrapper">
+								<p class="people__number">1</p>
+								<img src="./assests/people1.png" alt="" class="people__img" />
+								<p class="people__name">Keepitreal</p>
+								<p class="people__sales">
+									<span class="people__sales2">Top Sales: </span> 34.53 ETH
+								</p>
+							</div>
+							<div class="people__wrapper">
+								<p class="people__number">2</p>
+								<img src="./assests/people2.png" alt="" class="people__img" />
+								<p class="people__name">DigiLab</p>
+								<p class="people__sales">
+									<span class="people__sales2">Top Sales: </span> 34.53 ETH
+								</p>
+							</div>
+							<div class="people__wrapper">
+								<p class="people__number">3</p>
+								<img src="./assests/people3.png" alt="" class="people__img" />
+								<p class="people__name">GravityOne</p>
+								<p class="people__sales">
+									<span class="people__sales2">Top Sales: </span> 34.53 ETH
+								</p>
+							</div>
+							<div class="people__wrapper">
+								<p class="people__number">4</p>
+								<img src="./assests/people4.png" alt="" class="people__img" />
+								<p class="people__name">Juanie</p>
+								<p class="people__sales">
+									<span class="people__sales2">Top Sales: </span> 34.53 ETH
+								</p>
+							</div>
+							<div class="people__wrapper">
+								<p class="people__number">5</p>
+								<img src="./assests/people5.png" alt="" class="people__img" />
+								<p class="people__name">BlueWhale</p>
+								<p class="people__sales">
+									<span class="people__sales2">Top Sales: </span> 34.53 ETH
+								</p>
+							</div>
+							<div class="people__wrapper">
+								<p class="people__number">6</p>
+								<img src="./assests/people6.png" alt="" class="people__img" />
+								<img src="" alt="" />
+								<p class="people__name">Mr Fox</p>
+								<p class="people__sales">
+									<span class="people__sales2">Top Sales: </span> 34.53 ETH
+								</p>
+							</div>
+							<div class="people__wrapper">
+								<p class="people__number">7</p>
+								<img src="./assests/people7.png" alt="" class="people__img" />
+								<p class="people__name">Shroomie</p>
+								<p class="people__sales">
+									<span class="people__sales2">Top Sales: </span> 34.53 ETH
+								</p>
+							</div>
+							<div class="people__wrapper">
+								<p class="people__number">8</p>
+								<img src="./assests/people8.png" alt="" class="people__img" />
+								<p class="people__name">Robotica</p>
+								<p class="people__sales">
+									<span class="people__sales2">Top Sales: </span> 34.53 ETH
+								</p>
+							</div>
+							<div class="people__wrapper">
+								<p class="people__number">9</p>
+								<img src="./assests/people9.png" alt="" class="people__img" />
+								<p class="people__name">RustyRobot</p>
+								<p class="people__sales">
+									<span class="people__sales2">Top Sales: </span> 34.53 ETH
+								</p>
+							</div>
+							<div class="people__wrapper">
+								<p class="people__number">10</p>
+								<img src="./assests/people10.png" alt="" class="people__img" />
+								<p class="people__name">Animakid</p>
+								<p class="people__sales">
+									<span class="people__sales2">Top Sales: </span> 34.53 ETH
+								</p>
+							</div>
+							<div class="people__wrapper">
+								<p class="people__number">11</p>
+								<img src="./assests/people11.png" alt="" class="people__img" />
+								<p class="people__name">Dotgu</p>
+								<p class="people__sales">
+									<span class="people__sales2">Top Sales: </span> 34.53 ETH
+								</p>
+							</div>
+							<div class="people__wrapper">
+								<p class="people__number">12</p>
+								<img src="./assests/people12.png" alt="" class="people__img" />
+								<p class="people__name">Ghiblier</p>
+								<p class="people__sales">
+									<span class="people__sales2">Top Sales: </span> 34.53 ETH
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- section end -->
+
+			<!-- section start -->
+			<!-- section 4 start -->
+			<section class="secttion">
+				<div class="container">
+					<h1 class="section4__title">Browse Categories</h1>
+
+					<ul class="image-list">
+						<li class="image-item">
+							<img src="./assests/kistichka.svg" alt="Art" class="image" />
+							<h1 class="art">Art</h1>
+						</li>
+						<li class="image-item">
+							<img src="./assests/gorilla2.svg" alt="Art" class="image" />
+							<h1 class="art">Collectibles</h1>
+						</li>
+
+
+						<li class="image-item">
+							<img src="./assests/music.svg" alt="Art" class="image" />
+							<h1 class="art">Music</h1>
+						</li>
+						<li class="image-item">
+							<img src="./assests/photo2.svg" alt="Art" class="image" />
+							<h1 class="art">Photography</h1>
+						</li>
+
+						<!-- tut -->
+
+						<li class="image-item">
+							<img src="./assests/video.svg" alt="Art" class="image" />
+							<h1 class="art">Video</h1>
+						</li>
+						<li class="image-item">
+							<img src="./assests/six.svg" alt="Art" class="image" />
+							<h1 class="art">Utility</h1>
+						</li>
+						<li class="image-item">
+							<img src="./assests/baseball.svg" alt="Art" class="image" />
+							<h1 class="art">Sport</h1>
+						</li>
+						<li class="image-item">
+							<img class="image" src="./assests/saturn.svg" alt="Art" />
+							<h1 class="art">Virtual Worlds</h1>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<!-- section 4 end -->
+
+			<!-- section5 start -->
+			<section class="sekwn">
+				<div class="container">
+					<div class="rism">
+						<h1 class="ko">Magic Mashrooms</h1>
+						<img
+							width="1030px"
+							height="500px"
+							class="quzqorn"
+							src="./quz.png"
+							alt=""
+						/>
+
+						<button class="NFT"><i class="bi bi-eye"></i> See NFT</button>
+
+						<!-- <button class="ook">Shroomie</button>
+					
+					<img class="okk" src="./Avatar.png" alt=""> -->
+					</div>
+				</div>
+			</section>
+			<!-- section5 end -->
+
+			<!-- section6 start -->
+			<section class="oltincisecwn">
+				<div class="container">
+					<div class="oltinci">
+						<h1 class="lo">Discover More NFTs</h1>
+						<p class="pii">Explore new trending NFTs</p>
+						<button class="NFTT"><i class="biii bi-eye"></i> See all</button>
+					</div>
+					<div class="ucta_ciroylirasm">
+						<ul class="image-lisit">
+							<li class="image-itemm">
+								<img src="./kosmk.svg " alt="vax" class="image" />
+								<h1 class="vax">Distant Galaxy</h1>
+								<img src="./gle qiz.png" alt="" />
+								<img class="beze" src="./BEZAK.png" alt="" />
+								<img class="y" src="./yozuv.png" alt="" />
+							</li>
+							<li class="image-itemm">
+								<img src="./Image.svg " alt="vax" class="image" />
+								<h1 class="vax">Life On Edena</h1>
+								<img src="./NIGGA.png" alt="" />
+								<img class="bezek" src="./BEZAK.png" alt="" />
+								<img class="o" src="./yozuv.png" alt="" />
+							</li>
+							<li class="image-itemm">
+								<img src="./sariq bg.svg " alt="vax" class="imagee" />
+								<h1 class="vax">AstroFiction</h1>
+								<img src="./women nigga.png" alt="" />
+								<img class="bezekk" src="./BEZAK.png" alt="" />
+								<img class="z" src="./yozuv.png" alt="" />
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<!-- section6 start -->
+
+			<!-- section7 start -->
+			<section class="yettincisecwn">
+				<div class="container">
+					<div class="yettinci">
+						<h1 class="ecbr">How it works</h1>
+
+						<p class="pi">Find out how to get started</p>
+
+						<div class="uctasibirda">
+							<ul class="list">
+								<li class="item">
+									<img
+										class="do"
+										src="./fiyaletvi fayl.png "
+										alt="Art"
+										class="images"
+									/>
+									<h1 class="photo">Setup Your wallet</h1>
+									<p class="ol">
+										Set up your wallet of choice. <br />
+										Connect it to the Animarket by <br />
+										clicking the wallet icon in the top <br />
+										right corner.
+									</p>
+								</li>
+								<br /><br /><br />
+								<li class="item">
+									<img class="doo" src="./fiys.png" alt="Art" class="images" />
+									<h1 class="photo">Create Collection</h1>
+									<p class="go">
+										Upload your work and setup your <br />
+										collection. Add a description <br />, social links and floor
+										price.
+									</p>
+								</li>
+
+								<br /><br /><br />
+
+								<li class="item">
+									<img
+										class="dooo"
+										src="./karznka.png"
+										alt="Art"
+										class="images"
+									/>
+									<h1 class="photo">Start Earning</h1>
+									<p class="hu">
+										Choose between auctions and <br />
+										fixed-price listings. Start earning <br />
+										by selling your NFTs or trading <br />
+										others.
+									</p>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- section7 end -->
 		</main>
 	</body>
 </html>
