--- a/index.html
+++ b/index.html
@@ -247,7 +247,6 @@
 							<h1 class="art">Collectibles</h1>
 						</li>
 
-
 						<li class="image-item">
 							<img src="./assests/music.svg" alt="Art" class="image" />
 							<h1 class="art">Music</h1>
@@ -281,124 +280,276 @@
 			<!-- section 4 end -->
 
 			<!-- section5 start -->
-			<section class="sekwn">
-				<div class="container">
-					<div class="rism">
-						<h1 class="ko">Magic Mashrooms</h1>
-						<img
-							width="1030px"
-							height="500px"
-							class="quzqorn"
-							src="./quz.png"
-							alt=""
-						/>
-
-						<button class="NFT"><i class="bi bi-eye"></i> See NFT</button>
-
-						<!-- <button class="ook">Shroomie</button>
-					
-					<img class="okk" src="./Avatar.png" alt=""> -->
-					</div>
-				</div>
-			</section>
-			<!-- section5 end -->
-
-			<!-- section6 start -->
-			<section class="oltincisecwn">
-				<div class="container">
-					<div class="oltinci">
-						<h1 class="lo">Discover More NFTs</h1>
-						<p class="pii">Explore new trending NFTs</p>
-						<button class="NFTT"><i class="biii bi-eye"></i> See all</button>
-					</div>
-					<div class="ucta_ciroylirasm">
-						<ul class="image-lisit">
-							<li class="image-itemm">
-								<img src="./kosmk.svg " alt="vax" class="image" />
-								<h1 class="vax">Distant Galaxy</h1>
-								<img src="./gle qiz.png" alt="" />
-								<img class="beze" src="./BEZAK.png" alt="" />
-								<img class="y" src="./yozuv.png" alt="" />
-							</li>
-							<li class="image-itemm">
-								<img src="./Image.svg " alt="vax" class="image" />
-								<h1 class="vax">Life On Edena</h1>
-								<img src="./NIGGA.png" alt="" />
-								<img class="bezek" src="./BEZAK.png" alt="" />
-								<img class="o" src="./yozuv.png" alt="" />
-							</li>
-							<li class="image-itemm">
-								<img src="./sariq bg.svg " alt="vax" class="imagee" />
-								<h1 class="vax">AstroFiction</h1>
-								<img src="./women nigga.png" alt="" />
-								<img class="bezekk" src="./BEZAK.png" alt="" />
-								<img class="z" src="./yozuv.png" alt="" />
-							</li>
-						</ul>
-					</div>
-				</div>
-			</section>
-			<!-- section6 start -->
-
-			<!-- section7 start -->
-			<section class="yettincisecwn">
-				<div class="container">
-					<div class="yettinci">
-						<h1 class="ecbr">How it works</h1>
-
-						<p class="pi">Find out how to get started</p>
-
-						<div class="uctasibirda">
-							<ul class="list">
-								<li class="item">
-									<img
-										class="do"
-										src="./fiyaletvi fayl.png "
-										alt="Art"
-										class="images"
-									/>
-									<h1 class="photo">Setup Your wallet</h1>
-									<p class="ol">
-										Set up your wallet of choice. <br />
-										Connect it to the Animarket by <br />
-										clicking the wallet icon in the top <br />
-										right corner.
-									</p>
-								</li>
-								<br /><br /><br />
-								<li class="item">
-									<img class="doo" src="./fiys.png" alt="Art" class="images" />
-									<h1 class="photo">Create Collection</h1>
-									<p class="go">
-										Upload your work and setup your <br />
-										collection. Add a description <br />, social links and floor
-										price.
-									</p>
-								</li>
-
-								<br /><br /><br />
-
-								<li class="item">
-									<img
-										class="dooo"
-										src="./karznka.png"
-										alt="Art"
-										class="images"
-									/>
-									<h1 class="photo">Start Earning</h1>
-									<p class="hu">
-										Choose between auctions and <br />
-										fixed-price listings. Start earning <br />
-										by selling your NFTs or trading <br />
-										others.
-									</p>
-								</li>
-							</ul>
+			<div class="container">
+				<section class="magic">
+					<div class="magic__wrapper">
+						<div class="magic__left">
+							<div class="magic__minibox">
+								<p class="minibox-text">Shroomie</p>
+							</div>
+							<h2 class="magic__title">Magic Mashrooms</h2>
+							<button class="magic__btn">See NFT</button>
+						</div>
+						<div class="magic__right">
+							<div class="magic__right-box">
+								<p class="magic__right_box_title">Auction ends in:</p>
+								<ul class="magic__right_box-menu">
+									<li class="right_box_menu-item">
+										<p class="right_box_menu-hour">59</p>
+										<p class="right_box_menu-hour-name">Hours</p>
+									</li>
+									<li class="right_box_menu-item">
+										<p class="right_box_menu-hour_dor">:</p>
+									</li>
+									<li class="right_box_menu-item">
+										<p class="right_box_menu-hour">59</p>
+										<p class="right_box_menu-hour-name">Minutes</p>
+									</li>
+									<li class="right_box_menu-item">
+										<p class="right_box_menu-hour_dor">:</p>
+									</li>
+									<li class="right_box_menu-item">
+										<p class="right_box_menu-hour">59</p>
+										<p class="right_box_menu-hour-name">Seconds</p>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
-				</div>
-			</section>
-			<!-- section7 end -->
+				</section>
+			</div>
+
+			<div class="container">
+				<section class="more">
+					<div class="more_wrappper">
+						<div class="more_wrapper-item">
+							<div class="more_wrapper_item-title">
+								<p class="more_wrapper_item-text">Discover More NFTs</p>
+								<p class="more_wrapepr_item-minitext">
+									Explore new trending NFTs
+								</p>
+							</div>
+							<button class="more_wrapper_item-btn">See All</button>
+						</div>
+						<div class="more_wrapper_bottom_box">
+							<div class="more_bottom-box">
+								<img
+									src="./assests/first.png"
+									alt=""
+									class="more_bottom_box-content"
+								/>
+								<p class="more_bottom-title">Distant Galaxy</p>
+								<div class="more_bottom_avatar-box">
+									<img
+										width="30"
+										height="30"
+										src="./assests/first_avatar.png"
+										alt=""
+										class="more_bottom_avatar"
+									/>
+									<p class="more_bottom_avatar-name">MoonDancer</p>
+								</div>
+								<ul class="more_bottom_avatar_menu">
+									<li class="more_bottom_avatar-item">
+										<p class="more_bottom_avatar-price">Price</p>
+										<p class="more_bottom_avatar-number">1.63 ETH</p>
+									</li>
+									<li class="more_bottom_avatar-item">
+										<p class="more_bottom_avatar-price">Highest Bid</p>
+										<p class="more_bottom_avatar-number">0.33 wETH</p>
+									</li>
+								</ul>
+							</div>
+							<div class="more_bottom-box">
+								<img
+									src="./assests/second.png"
+									alt=""
+									class="more_bottom_box-content"
+								/>
+								<p class="more_bottom-title">Life On Edena</p>
+								<div class="more_bottom_avatar-box">
+									<img
+										width="30"
+										height="30"
+										src="./assests/second_avatar.png"
+										alt=""
+										class="more_bottom_avatar"
+									/>
+									<p class="more_bottom_avatar-name">NebulaKid</p>
+								</div>
+								<ul class="more_bottom_avatar_menu">
+									<li class="more_bottom_avatar-item">
+										<p class="more_bottom_avatar-price">Price</p>
+										<p class="more_bottom_avatar-number">1.63 ETH</p>
+									</li>
+									<li class="more_bottom_avatar-item">
+										<p class="more_bottom_avatar-price">Highest Bid</p>
+										<p class="more_bottom_avatar-number">0.33 wETH</p>
+									</li>
+								</ul>
+							</div>
+							<div class="more_bottom-box">
+								<img
+									src="./assests/third.png"
+									alt=""
+									class="more_bottom_box-content"
+								/>
+								<p class="more_bottom-title">AstroFiction</p>
+								<div class="more_bottom_avatar-box">
+									<img
+										width="30"
+										height="30"
+										src="./assests/third_avatar.png"
+										alt=""
+										class="more_bottom_avatar"
+									/>
+									<p class="more_bottom_avatar-name">Spaceone</p>
+								</div>
+								<ul class="more_bottom_avatar_menu">
+									<li class="more_bottom_avatar-item">
+										<p class="more_bottom_avatar-price">Price</p>
+										<p class="more_bottom_avatar-number">1.63 ETH</p>
+									</li>
+									<li class="more_bottom_avatar-item">
+										<p class="more_bottom_avatar-price">Highest Bid</p>
+										<p class="more_bottom_avatar-number">0.33 wETH</p>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</section>
+			</div>
+
+			<div class="container">
+				<section class="work">
+					<h3 class="work__title">How it works</h3>
+					<p class="work__text">Find out how to get started</p>
+					<div class="work__wrapper">
+						<div class="work__box">
+							<img
+								src="/assests/card.png"
+								alt=""
+								class="work_box-content"
+							/>
+							<h4 class="work__wrapper-title">Setup Your wallet</h4>
+							<p class="work__wrapper-text">
+								Set up your wallet of choice. Connect it to the Animarket by
+								clicking the wallet icon in the top right corner.
+							</p>
+						</div>
+
+						<div class="work__box">
+							<img
+								src="/assests/collection.png"
+								alt=""
+								class="work_box-content"
+							/>
+							<h4 class="work__wrapper-title">Create Collection</h4>
+							<p class="work__wrapper-text">
+								Upload your work and setup your collection. Add a description,
+								social links and floor price.
+							</p>
+						</div>
+						<div class="work__box">
+							<img
+								src="/assests/shopping.png"
+								alt=""
+								class="work_box-content"
+							/>
+							<h4 class="work__wrapper-title">Start Earning</h4>
+							<p class="work__wrapper-text">
+								Choose between auctions and fixed-price listings. Start earning
+								by selling your NFTs or trading others.
+							</p>
+						</div>
+					</div>
+				</section>
+			</div>
+			<div class="container">
+				<section class="join">
+					<div class="join_wrapper">
+						<div class="join_wrapper-box">
+							<div class="join_wrapper_box-menu">
+								<img
+									src="./assests/kosmonavt.png"
+									alt=""
+									class="join_wrapper_box-content"
+								/>
+								<div class="join_wrapper_right-box">
+									<p class="join_wrapper_right-title">
+										Join our weekly <br />
+										digest
+									</p>
+									<p class="join_wrapper_right-mini">
+										Get exclusive promotions & updates <br />
+										straight to your inbox.
+									</p>
+									<div class="join_wrapper_right_join">
+										<p class="join_wrapper_right_title">
+											Enter your email here
+										</p>
+										<div class="join_wrapper_right_subs_box">
+											<p class="join_wrapper_right_subs-title">Subscribe</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+			</div>
+
+			
 		</main>
+		<div class="container">
+				 <footer class="footer">
+      <div class="container">
+        <div class="footer__main">
+          <div class="footer__wrapper">
+            <div class="footer__first">
+              <div class="header_item">
+                <img
+                  src="./assests/logo.svg"
+                  alt=""
+                  class="header_logo"
+                />
+              </div>
+              <p class="footer__first-box-text">
+                NFT marketplace UI created with Anima for Figma.
+              </p>
+              <p class="footer__first-box-text">Join our community</p>
+              <i class="bi bi-playstation"></i>
+              <i class="bi bi-youtube"></i>
+              <i class="bi bi-twitter"></i>
+              <i class="bi bi-instagram"></i>
+            </div>
+            <div class="footer__first se">
+              <h3 class="footer__first-title second">Explore</h3>
+              <p class="footer__first-box-text">Marketplace</p>
+              <p class="footer__first-box-text">Rankings</p>
+              <p class="footer__first-box-text">Connect a wallet</p>
+            </div>
+            <div class="footer__first">
+              <h3 class="footer__first-title">Join our weekly digest</h3>
+              <p class="footer__first-box-text2">
+                Get exclusive promotions & updates straight to your inbox.
+              </p>
+              <div class="join_wrapper_right_join">
+                <p class="join_wrapper_right_title">Enter your email here</p>
+                <div class="join_wrapper_right_subs_box">
+                  <p class="join_wrapper_right_subs-title">Subscribe</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="line"></div>
+          <p class="footer__last-text">
+            Ⓒ NFT Market. Use this template freely.
+          </p>
+        </div>
+      </div>
+    </footer>
+			</div>
 	</body>
 </html>
