--- a/index.html
+++ b/index.html
@@ -281,36 +281,36 @@
 
 			<!-- section5 start -->
 			<div class="container">
-				<section class="magic">
-					<div class="magic__wrapper">
-						<div class="magic__left">
-							<div class="magic__minibox">
-								<p class="minibox-text">Shroomie</p>
+				<section class="section5">
+					<div class="section5__wrapper">
+						<div class="section5__left">
+							<div class="section5__box">
+								<p class="section5-box__text">Shroomie</p>
 							</div>
-							<h2 class="magic__title">Magic Mashrooms</h2>
-							<button class="magic__btn">See NFT</button>
+							<h2 class="section5__title">Magic Mashrooms</h2>
+							<button class="section5__btn">See NFT</button>
 						</div>
-						<div class="magic__right">
-							<div class="magic__right-box">
-								<p class="magic__right_box_title">Auction ends in:</p>
-								<ul class="magic__right_box-menu">
-									<li class="right_box_menu-item">
-										<p class="right_box_menu-hour">59</p>
-										<p class="right_box_menu-hour-name">Hours</p>
+						<div class="section5__right">
+							<div class="section5__right-box">
+								<p class="section5__right-box_title">Auction ends in:</p>
+								<ul class="section5__box-menu">
+									<li class="section5__menu-item">
+										<p class="section5__time">59</p>
+										<p class="section5__time__text">Hours</p>
 									</li>
-									<li class="right_box_menu-item">
+									<li class="section5__menu-item">
 										<p class="right_box_menu-hour_dor">:</p>
 									</li>
-									<li class="right_box_menu-item">
-										<p class="right_box_menu-hour">59</p>
-										<p class="right_box_menu-hour-name">Minutes</p>
+									<li class="section5__menu-item">
+										<p class="section5__time">59</p>
+										<p class="section5__time__text">Minutes</p>
 									</li>
-									<li class="right_box_menu-item">
-										<p class="right_box_menu-hour_dor">:</p>
+									<li class="section5_menu-item">
+										<p class="section5__dot">:</p>
 									</li>
-									<li class="right_box_menu-item">
-										<p class="right_box_menu-hour">59</p>
-										<p class="right_box_menu-hour-name">Seconds</p>
+									<li class="section5__menu-item">
+										<p class="section5__time">59</p>
+										<p class="section5__time__text">Seconds</p>
 									</li>
 								</ul>
 							</div>
@@ -320,26 +320,24 @@
 			</div>
 
 			<div class="container">
-				<section class="more">
-					<div class="more_wrappper">
-						<div class="more_wrapper-item">
-							<div class="more_wrapper_item-title">
-								<p class="more_wrapper_item-text">Discover More NFTs</p>
-								<p class="more_wrapepr_item-minitext">
-									Explore new trending NFTs
-								</p>
+				<section class="section6">
+					<div class="section666_wrappper">
+						<div class="section666">
+							<div class="titleeeeeee">
+								<p class="section6__item-text">Discover More NFTs</p>
+								<p class="section6__explore">Explore new trending NFTs</p>
 							</div>
-							<button class="more_wrapper_item-btn">See All</button>
+							<button class="section6__btn">See All</button>
 						</div>
-						<div class="more_wrapper_bottom_box">
-							<div class="more_bottom-box">
+						<div class="section6__wrapper-box">
+							<div class="section6__box">
 								<img
 									src="./assests/first.png"
 									alt=""
 									class="more_bottom_box-content"
 								/>
-								<p class="more_bottom-title">Distant Galaxy</p>
-								<div class="more_bottom_avatar-box">
+								<p class="section6__title">Distant Galaxy</p>
+								<div class="section6__avatar">
 									<img
 										width="30"
 										height="30"
@@ -347,55 +345,55 @@
 										alt=""
 										class="more_bottom_avatar"
 									/>
-									<p class="more_bottom_avatar-name">MoonDancer</p>
+									<p class="section6__avatar-name">MoonDancer</p>
 								</div>
-								<ul class="more_bottom_avatar_menu">
-									<li class="more_bottom_avatar-item">
-										<p class="more_bottom_avatar-price">Price</p>
-										<p class="more_bottom_avatar-number">1.63 ETH</p>
+								<ul class="section6__menu">
+									<li class="section6__menu-item">
+										<p class="section6__price">Price</p>
+										<p class="section6__number">1.63 ETH</p>
 									</li>
-									<li class="more_bottom_avatar-item">
-										<p class="more_bottom_avatar-price">Highest Bid</p>
-										<p class="more_bottom_avatar-number">0.33 wETH</p>
+									<li class="section6__menu-item">
+										<p class="section6__price">Highest Bid</p>
+										<p class="section6__number">0.33 wETH</p>
 									</li>
 								</ul>
 							</div>
-							<div class="more_bottom-box">
+							<div class="section6__box">
 								<img
 									src="./assests/second.png"
 									alt=""
-									class="more_bottom_box-content"
+									class="imageeeeee"
 								/>
-								<p class="more_bottom-title">Life On Edena</p>
-								<div class="more_bottom_avatar-box">
+								<p class="section6__title">Life On Edena</p>
+								<div class="section6__avatar">
 									<img
 										width="30"
 										height="30"
 										src="./assests/second_avatar.png"
 										alt=""
-										class="more_bottom_avatar"
+										class="imageeeeee"
 									/>
-									<p class="more_bottom_avatar-name">NebulaKid</p>
+									<p class="section6__avatar-name">NebulaKid</p>
 								</div>
-								<ul class="more_bottom_avatar_menu">
-									<li class="more_bottom_avatar-item">
-										<p class="more_bottom_avatar-price">Price</p>
-										<p class="more_bottom_avatar-number">1.63 ETH</p>
+								<ul class="section6__menu">
+									<li class="section6__menu-item">
+										<p class="section6__price">Price</p>
+										<p class="section6__number">1.63 ETH</p>
 									</li>
-									<li class="more_bottom_avatar-item">
-										<p class="more_bottom_avatar-price">Highest Bid</p>
-										<p class="more_bottom_avatar-number">0.33 wETH</p>
+									<li class="section6__menu-item">
+										<p class="section6__price">Highest Bid</p>
+										<p class="section6__number">0.33 wETH</p>
 									</li>
 								</ul>
 							</div>
-							<div class="more_bottom-box">
+							<div class="section6__box">
 								<img
 									src="./assests/third.png"
 									alt=""
-									class="more_bottom_box-content"
+									class="imageeeeee"
 								/>
-								<p class="more_bottom-title">AstroFiction</p>
-								<div class="more_bottom_avatar-box">
+								<p class="section6__title">AstroFiction</p>
+								<div class="section6__avatar">
 									<img
 										width="30"
 										height="30"
@@ -403,16 +401,16 @@
 										alt=""
 										class="more_bottom_avatar"
 									/>
-									<p class="more_bottom_avatar-name">Spaceone</p>
+									<p class="section6__avatar-name">Spaceone</p>
 								</div>
-								<ul class="more_bottom_avatar_menu">
-									<li class="more_bottom_avatar-item">
-										<p class="more_bottom_avatar-price">Price</p>
-										<p class="more_bottom_avatar-number">1.63 ETH</p>
+								<ul class="section6__menu">
+									<li class="section6__menu-item">
+										<p class="section6__price">Price</p>
+										<p class="section6__number">1.63 ETH</p>
 									</li>
-									<li class="more_bottom_avatar-item">
-										<p class="more_bottom_avatar-price">Highest Bid</p>
-										<p class="more_bottom_avatar-number">0.33 wETH</p>
+									<li class="section6__menu-item">
+										<p class="section6__price">Highest Bid</p>
+										<p class="section6__number">0.33 wETH</p>
 									</li>
 								</ul>
 							</div>
@@ -427,11 +425,7 @@
 					<p class="work__text">Find out how to get started</p>
 					<div class="work__wrapper">
 						<div class="work__box">
-							<img
-								src="/assests/card.png"
-								alt=""
-								class="work_box-content"
-							/>
+							<img src="/assests/card.png" alt="" class="work_box-content" />
 							<h4 class="work__wrapper-title">Setup Your wallet</h4>
 							<p class="work__wrapper-text">
 								Set up your wallet of choice. Connect it to the Animarket by
@@ -499,57 +493,51 @@
 					</div>
 				</section>
 			</div>
-
-			
 		</main>
 		<div class="container">
-				 <footer class="footer">
-      <div class="container">
-        <div class="footer__main">
-          <div class="footer__wrapper">
-            <div class="footer__first">
-              <div class="header_item">
-                <img
-                  src="./assests/logo.svg"
-                  alt=""
-                  class="header_logo"
-                />
-              </div>
-              <p class="footer__first-box-text">
-                NFT marketplace UI created with Anima for Figma.
-              </p>
-              <p class="footer__first-box-text">Join our community</p>
-              <i class="bi bi-playstation"></i>
-              <i class="bi bi-youtube"></i>
-              <i class="bi bi-twitter"></i>
-              <i class="bi bi-instagram"></i>
-            </div>
-            <div class="footer__first se">
-              <h3 class="footer__first-title second">Explore</h3>
-              <p class="footer__first-box-text">Marketplace</p>
-              <p class="footer__first-box-text">Rankings</p>
-              <p class="footer__first-box-text">Connect a wallet</p>
-            </div>
-            <div class="footer__first">
-              <h3 class="footer__first-title">Join our weekly digest</h3>
-              <p class="footer__first-box-text2">
-                Get exclusive promotions & updates straight to your inbox.
-              </p>
-              <div class="join_wrapper_right_join">
-                <p class="join_wrapper_right_title">Enter your email here</p>
-                <div class="join_wrapper_right_subs_box">
-                  <p class="join_wrapper_right_subs-title">Subscribe</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="line"></div>
-          <p class="footer__last-text">
-            Ⓒ NFT Market. Use this template freely.
-          </p>
-        </div>
-      </div>
-    </footer>
-			</div>
+			<footer class="footer">
+				<div class="container">
+					<div class="footer__main">
+						<div class="footer__wrapper">
+							<div class="footer__first">
+								<div class="header_item">
+									<img src="./assests/logo.svg" alt="" class="header_logo" />
+								</div>
+								<p class="footer__first-box-text">
+									NFT marketplace UI created with Anima for Figma.
+								</p>
+								<p class="footer__first-box-text">Join our community</p>
+								<i class="bi bi-playstation"></i>
+								<i class="bi bi-youtube"></i>
+								<i class="bi bi-twitter"></i>
+								<i class="bi bi-instagram"></i>
+							</div>
+							<div class="footer__first se">
+								<h3 class="footer__first-title second">Explore</h3>
+								<p class="footer__first-box-text">Marketplace</p>
+								<p class="footer__first-box-text">Rankings</p>
+								<p class="footer__first-box-text">Connect a wallet</p>
+							</div>
+							<div class="footer__first">
+								<h3 class="footer__first-title">Join our weekly digest</h3>
+								<p class="footer__first-box-text2">
+									Get exclusive promotions & updates straight to your inbox.
+								</p>
+								<div class="join_wrapper_right_join">
+									<p class="join_wrapper_right_title">Enter your email here</p>
+									<div class="join_wrapper_right_subs_box">
+										<p class="join_wrapper_right_subs-title">Subscribe</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="line"></div>
+						<p class="footer__last-text">
+							Ⓒ NFT Market. Use this template freely.
+						</p>
+					</div>
+				</div>
+			</footer>
+		</div>
 	</body>
 </html>
